src/css/App.css
.gooey-embed-container * :not(code *) {
  box-sizing: border-box;
  font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto,
    Ubuntu, Cantarell, "Noto Sans", sans-serif, "Helvetica Neue", Arial,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: transparent;
}

blockquote,
dd,
dl,
fieldset,
figure,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
p,
pre,
ul,
ol,
li,
p {
  margin: 0;
  padding: 0;
}

menu,
ol,
ul {
  list-style: none;
}
.gooey-embed-container {
  height: 100%;
  position: relative;
}

.gooey-embed-container p {
  color: unset;
}

.gooey-embed-container a {
  color: inherit;
  text-decoration: underline;
  text-decoration-color: rgba(0, 0, 0, 0.45);
  text-decoration-thickness: 0.6px;
  text-underline-offset: 0.15em;
}

.gooey-embed-container a:hover {
  color: inherit;
  text-decoration-color: black;
  text-decoration-thickness: 2px;
}

div:focus-visible {
  outline: none;
}

::-webkit-scrollbar {
background: transparent;
  color: white;
  width: 8px;
  height: 8px;
}

::-webkit-scrollbar-thumb {
  background: rgba(0, 0, 0, 0.2);
  border-radius: 0;
}

code,
code[class*="language-"] {
  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas,
    Liberation Mono, monospace !important;
  font-size: 0.9rem;
  color: inherit;
  white-space: pre-wrap;
  word-wrap: break-word;
  max-width: 100%;
}

pre,
pre[class*="language-"] {
  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas,
    Liberation Mono, monospace !important;
  overflow: auto;
  word-wrap: break-word;
  padding: 0.4rem 0.6rem;
  margin: 0 0 0.9rem;
  border-radius: 0 0 8px 8px;
}

svg {
  fill: currentColor;
}

